Modify QR code image source
Updated QR code image source to remove hardcoded message.

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     <!-- QR CODE -->
     <div class="qr">
         <p><b>Scan this 💌</b></p>
-        <img src="https://api.qrserver.com/v1/create-qr-code/?size=300x300&data=Happy Birthday Amna Nabila! Awak sangat special. From Aiman ❤️">
+        <img src="https://api.qrserver.com/v1/create-qr-code/?size=300x300&data=">
     </div>
 
     <div class="footer">
