Update QR code image source in index.html

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     <!-- QR CODE -->
     <div class="qr">
         <p><b>Scan this 💌</b></p>
-        <img src="https://api.qrserver.com/v1/create-qr-code/?size=300x300&data=">
+        <img src="https://api.qrserver.com/v1/create-qr-code/?size=300x300&data=https://m4iman.github.io/aimann/">
     </div>
 
     <div class="footer">
